--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-jupyterlab == 3.6.3
+jupyterlab
 numpy
 scipy
 matplotlib == 3.7.2
 ipywidgets == 8.0.4
 ipympl == 0.9.3
 shapely
-jupyter_contrib_nbextensions
