--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-jupyterlab == 4.2.5
+# These exact versions are known to work, others will too, but ...
+jupyterlab == 4.3.4
 numpy
 scipy
-matplotlib == 3.9.2
-ipywidgets == 8.1.5
-ipympl == 0.9.6
+matplotlib == 3.10.0
+ipywidgets == 8.1.7
+ipympl == 0.9.7
 shapely
